@@ -38,6 +38,7 @@ struct Option
     unsigned int generateNamespace : 1;
     unsigned int autoConnection : 1;
     unsigned int dependencies : 1;
+    unsigned int execCode : 1;
     Generator generator;
 
     QString inputFile;
@@ -59,6 +60,7 @@ struct Option
           generateNamespace(1),
           autoConnection(1),
           dependencies(0),
+          execCode(0),
           generator(CppGenerator),
           prefix(QLatin1String("Ui_"))
     { indent.fill(QLatin1Char(' '), 4); }
